[우리] 병합 후 변경사항